@@ -15,6 +15,11 @@ debian/tmp@MOZ_LIBDIR@/searchplugins/* /usr/lib/@MOZ_APP_NAME@-addons/searchplug
 debian/tmp@MOZ_LIBDIR@/blocklist.xml
 debian/tmp@MOZ_LIBDIR@/extensions/\{972ce4c6-7e08-4474-a285-3208198ce6fd\} /usr/lib/@MOZ_APP_NAME@-addons/extensions
 %%if MOZ_UPDATE_CHANNEL == beta
+%%define SHIP_TESTPILOT
+%%elif MOZ_UPDATE_CHANNEL == aurora
+%%define SHIP_TESTPILOT
+%%endif
+%%ifdef SHIP_TESTPILOT
 debian/tmp@MOZ_LIBDIR@/distribution/extensions/testpilot@labs.mozilla.com.xpi /usr/lib/@MOZ_APP_NAME@-addons/extensions
 %%endif
 debian/tmp@MOZ_LIBDIR@/*.ini
